--- a/scss/core-styles/layout/_site.scss
+++ b/scss/core-styles/layout/_site.scss
@@ -10,19 +10,13 @@
     //overflow: hidden;
   }
 
-  .site-header {
-    overflow: auto;
-  }
-
   .site-content {
     background-color: $theme-bg;
-    overflow: auto;
     padding-bottom: $spacer;
   }
 
   .site-footer {
     position: relative; // so debug toggle can use absolute positioning relative to the footer
-    overflow: auto;
   }
 
   .site-debug {
